--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       },
       {
         "type": "image",
-        "url": "https://www.img.in.th/images/f850695301f4ce68c5ec18d21526ca38.jpg",
+        "url": "https://www.img.in.th/images/8e898a696cfc98eb72feed9e099ade6a.png",
         "aspectMode": "fit",
         "aspectRatio": "2:1",
         "size": "4xl",
